--- a/Homework/Day3/Day003_color_spave_op_HW.ipynb
+++ b/Homework/Day3/Day003_color_spave_op_HW.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,8 +108,8 @@
     "img_bgr_equal[..., 2] = equalHist_by_channel_red\n",
     "\n",
     "# case 2 - 轉換 color space 後只對其中一個 channel 做直方圖均衡\n",
-    "img_hsv_equal = img_hsv.copy()\n",
-    "img_hsv_equal[..., 1] = cv2.equalizeHist(img_hsv_equal[..., 1])\n",
+    "img_hsv[..., 1] = cv2.equalizeHist(img_hsv[..., 1])\n",
+    "img_hsv_equal = cv2.cvtColor(img_hsv, cv2.COLOR_HSV2BGR)\n",
     "\n",
     "# 組合圖片 + 顯示圖片\n",
     "img_bgr_equalHist = np.hstack((img, img_bgr_equal, img_hsv_equal))\n",
